# slskd-lidarr-bridge

./: .dockerignore  .gitignore  .grype.yaml  AGENTS.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: checks.yml  grype-scan.yml  pr.yml  release.yml
docs/plans/: 2026-06-30-search-normalization-fallback.md  2026-07-01-audit-hardening.md
docs/specs/: 2026-06-30-search-normalization-fallback-design.md
docs/superpowers/plans/: 2026-06-29-slskd-lidarr-bridge.md
docs/superpowers/specs/: 2026-06-29-slskd-lidarr-bridge-design.md
security/: vex.openvex.json
src/slskd_lidarr_bridge/: config.py  logging_setup.py  main.py
src/slskd_lidarr_bridge/adapters/: slskd_gateway.py  sqlite_store.py  system_clock.py
src/slskd_lidarr_bridge/adapters/inbound/: app.py  newznab.py  nzb.py  sabnzbd.py  xml.py
src/slskd_lidarr_bridge/adapters/outbound/: slskd_gateway.py  sqlite_store.py  system_clock.py
src/slskd_lidarr_bridge/domain/: download_service.py  models.py  paths.py  ports.py  quality.py  query_candidates.py  search_service.py  titles.py
src/slskd_lidarr_bridge/web/: app.py  newznab.py  nzb.py  sabnzbd.py  xml.py
tests/: conftest.py  test_config.py  test_logging_setup.py  test_main.py  test_smoke.py
tests/adapters/: test_slskd_gateway.py  test_sqlite_store.py  test_system_clock.py
tests/adapters/inbound/: test_app.py  test_newznab.py  test_nzb.py  test_sabnzbd.py  test_xml.py
tests/adapters/outbound/: test_slskd_gateway.py  test_sqlite_store.py  test_system_clock.py
tests/domain/: test_download_service.py  test_models.py  test_paths.py  test_ports.py  test_quality.py  test_query_candidates.py  test_search_service.py  test_titles.py
tests/e2e/: test_flow.py
tests/fixtures/: build_corpus.py
tests/fixtures/corpus/: README.md  ampersand.json  clean.json  compilation.json  diacritics.json  edition.json  long_title.json  non_latin.json
tests/web/: test_app.py  test_newznab.py  test_nzb.py  test_sabnzbd.py  test_xml.py
