[project]
name = "slskd-lidarr-bridge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "waitress>=3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
    "pytest>=8",
    "respx>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slskd_lidarr_bridge"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
