[project]
name = "slskd-lidarr-bridge"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "waitress>=3.0",
    "httpx>=0.27",
]

[project.optional-dependencies]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "respx>=0.21",
    "ruff>=0.9",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/slskd_lidarr_bridge"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--cov --cov-report=term-missing"

[tool.coverage.run]
source = ["slskd_lidarr_bridge"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 100

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
mypy_path = "src"

# Tests use fakes and pytest fixtures: don't force annotating every test
# function or fake, but still type-check their bodies for real type errors
# (None-safety, argument mismatches, …) against the typed production code.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false
disallow_any_generics = false

# Third-party packages without bundled type stubs.
[[tool.mypy.overrides]]
module = ["waitress.*", "respx.*"]
ignore_missing_imports = true
